--- a/index.html
+++ b/index.html
@@ -1,1 +1,18 @@
-<h1> Testing the Page </h1>
+<!doctype html>
+<html>
+<head>
+  <title>Title of Your Page</title>
+  <script>
+
+  </script>
+
+  <style>
+
+  </style>
+</head>
+
+<body>
+  <h1> Testing the Page </h1>
+	<p>Hello</p>
+</body>
+</html>
