--- a/index.html
+++ b/index.html
@@ -1,18 +1,20 @@
-<!doctype html>
-<html>
-<head>
-  <title>Title of Your Page</title>
-  <script>
-
-  </script>
-
-  <style>
-
-  </style>
-</head>
-
-<body>
-  <h1> Testing the Page </h1>
-	<p>Hello</p>
-</body>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>WDD 330 portfolio</title>
+    <link rel="stylesheet" href="styles.css" />
+  </head>
+  <body>
+    <h1>WDD 330 portfolio</h1>
+    <ol>
+      <li><a href="week1/">Week01</a></li>
+      <li><a href="week2/">Week02</a></li>
+      <li><a href="challenge1/index.html">Challenge 1: Todo</a></li>
+    </ol>
+    
+      
+    </ul>
+  </body>
 </html>
