--- a/index.html
+++ b/index.html
@@ -6,8 +6,9 @@
     <title>WDD 330 portfolio</title>
     <link rel="stylesheet" href="styles.css" />
   </head>
+
   <body>
-    <h1>WDD 330 portfolio</h1>
+    <h1>Front End Web Development</h1>
     <ol>
       <li><a href="week1/">Week01</a></li>
       <li><a href="week2/">Week02</a></li>
