--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
   <body>
     <h1>Front End Web Development test for upload</h1>
-    <li id = myList>
+    <li id = week_list>
       
     </li>
     
