--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
   <body>
     <h1>Front End Web Development test for upload</h1>
     <li id = week_list>
+      <p id = "test"></p>
       
     </li>
     
