--- a/master_template.html
+++ b/master_template.html
@@ -1,36 +1,31 @@
 <!DOCTYPE HTML>
 <html lang= "en-us">
-<head>
-<title>  </title>
+	<head>
+		<title>  </title>
+		<meta charset="utf-8">
+		<meta name="author" content="Steven Chambers">
+		<meta name="keywords" content = "">
+		<meta name="description" content = "">
+		<meta name="viewport" content="width=device=width, initial-scale=1.0">
 
-	<meta charset="utf-8">
-	<meta name="author" content="Steven Chambers">
-	<meta name="keywords" content = "">
-	<meta name="description" content = "">
-	<meta name="viewport" content="width=device=width, initial-scale=1.0">
+     	<!--External Doc - CSS -->
+    	<link rel="stylesheet" type="text/css" href="file_name.css">
+	</head>
+	 
+	<body> 
 
-     <!--External Doc - CSS -->
-     <link rel="stylesheet" type="text/css" href="file_name.css">
-     
-
-</head>
-
-
-
-
-
+		
 
  
- <!--Bottom Seperator: simple line break with link back to assignments homepage -->
-<hr>
-<div class ="bottom">
-    <a href="../index.html"> To Previous </a>
-</div>
+ 		<!--Bottom Seperator: simple line break with link back to assignments homepage -->
+		<hr>
+		<div class ="bottom">
+    		<a href="../index.html"> To Previous </a>
+		</div>
 
 
-</body>
-
-<!--External .JS file-->
-<script src="file_name.js"></script>
+	</body>
+	<!--External .JS file-->
+	<script src="file_name.js"></script>
 
 </html> 
