creating Std Dev calc and index pages

--- a/week3/standard_dev_calc.html
+++ b/week3/standard_dev_calc.html
@@ -1,11 +1,11 @@
 <!DOCTYPE HTML>
 <html lang= "en-us">
 	<head>
-		<title>Week 3</title>
+		<title>Standard Deviation Calculator</title>
 		<meta charset="utf-8">
 		<meta name="author" content="Steven Chambers">
-		<meta name="keywords" content = "">
-		<meta name="description" content = "">
+		<meta name="keywords" content = "statistics, standard deviation, stats, normal model">
+		<meta name="description" content = "Calulator to find standard deviation in a data set">
 		<meta name="viewport" content="width=device=width, initial-scale=1.0">
 
      	<!--External Doc - CSS -->
@@ -13,20 +13,19 @@
 	</head>
 	 
 	<body> 
-            <p> week 3 landing page</p>
-		
+
+		<p>This is a test</p>
 
  
  		<!--Bottom Seperator: simple line break with link back to assignments homepage -->
 		<hr>
 		<div class ="bottom">
-    		<a href="index.html"> To Previous </a>
+    		<a href="front_end_web_dev/index.html"> To Previous </a>
 		</div>
 
 
 	</body>
 	<!--External .JS file-->
-	<script src="file_name.js"></script>
+	<script src="main.js"></script>
 
 </html> 
-
