wow, that was a waste of time....

--- a/week3/index.html
+++ b/week3/index.html
@@ -15,12 +15,12 @@
 	<body> 
             <p> week 3 landing page</p>
 		
-
+        <a href="standard_dev_calc.html">Standard Deviation Calulator</a>
  
  		<!--Bottom Seperator: simple line break with link back to assignments homepage -->
 		<hr>
 		<div class ="bottom">
-    		<a href="index.html"> To Previous </a>
+    		<a href="../index.html"> To Previous </a>
 		</div>
 
 
