calculated SD for population. Calc are correct.

--- a/week3/standard_dev_calc.html
+++ b/week3/standard_dev_calc.html
@@ -32,11 +32,11 @@
 			<p>Press enter key after entering in a value</p>
 			<input type="number" id="data" name="data">
 	</div>
-	
+
 
 	 <button onclick="validateNumber()">Add Data</button>
 	 <button onclick="removeData()">Remove Data</button>
-	 <button onclick="mean()">Calculate</button>
+	 <button onclick="stdDeviation()">Calculate</button>
 
 	
  		<!--Bottom Seperator: simple line break with link back to assignments homepage -->
