Output to HTML Done

--- a/week3/standard_dev_calc.html
+++ b/week3/standard_dev_calc.html
@@ -22,15 +22,22 @@
 		<P>Things needed</P>
 		<ul>
 			
-			<li>data input box</li>
-			<li>add to list on enter</li>
+			<li>Done: data input box</li>
+			<li>Done add to list on click</li>
 			<li>display entered data</li>
-			<li>remove last data point</li>
+			<li>Done: remove last data point on click</li>
 			<li>calulations display</li>
 		</ul>
 			<h2>Enter Data Below</h2>
 			<p>Press enter key after entering in a value</p>
 			<input type="number" id="data" name="data">
+	</div>
+
+	<div>
+		<p id="size"></p>
+		<p id="mean"></p>
+		<p id="popSD"></p>
+
 	</div>
 
 
