Changed URL path

--- a/week3/standard_dev_calc.html
+++ b/week3/standard_dev_calc.html
@@ -49,7 +49,7 @@
  		<!--Bottom Seperator: simple line break with link back to assignments homepage -->
 		<hr>
 		<div class ="bottom">
-    		<a href="front_end_web_dev/index.html"> To Previous </a>
+    		<a href="index.html"> To Previous </a>
 		</div>
 
 
