change and update layout

--- a/week3/standard_dev_calc.html
+++ b/week3/standard_dev_calc.html
@@ -30,7 +30,7 @@
 		</ul>
 			<h2>Enter Data Below</h2>
 			<p>Press enter key after entering in a value</p>
-			<input type="number" id="data" name="data">
+			<input type="number" id="data" name="data" placeholder="Enter datapoint here">
 	</div>
 
 	<div>
