Rename functions and code cleanup

--- a/week3/standard_dev_calc.html
+++ b/week3/standard_dev_calc.html
@@ -30,7 +30,7 @@
 		</ul>
 			<h2>Enter Data Below</h2>
 			<p>Press enter key after entering in a value</p>
-			<input type="number" id="data" name="data" placeholder="Enter datapoint here">
+			<input type="number" id="data" name="data" placeholder="Enter Datapoint here"> 
 	</div>
 
 	<div>
@@ -41,7 +41,7 @@
 	</div>
 
 
-	 <button onclick="validateNumber()">Add Data</button>
+	 <button onclick="addNumber()">Add Data</button>
 	 <button onclick="removeData()">Remove Data</button>
 	 <button onclick="stdDeviation()">Calculate</button>
 
