Upgrade STD calc, worked on CSS layout, added pic.

--- a/week4/index.html
+++ b/week4/index.html
@@ -16,7 +16,9 @@
             <h1> week 4 landing page</h1>
 		
         <a href="hero/hero.html">Hero form</a> <br>
-        <a href="search.html">Dummy search bar</a>
+		<a href="search.html">Dummy search bar</a> <br>
+		<a href="standard_dev_calc.html">Updated Standard Deviation Calculator</a>
+		
  
  		<!--Bottom Seperator: simple line break with link back to assignments homepage -->
 		<hr>
