--- a/week4/standard_dev_calc.html
+++ b/week4/standard_dev_calc.html
@@ -17,10 +17,12 @@
 	<div class="input">
 
 		<h1>Standard Deviation Calculator</h1>
-		<p>Please enter in your data pooints below and hit enter after each one. Your data will be shown below. When ready press calculate. If you have entered in an incorrect data point, click the remove button to remove the last data point. </p>
+		<p>Please enter in your data pooints below and hit enter after each one. Your data will be shown below.
+			 When ready press calculate. If you have entered in an incorrect data point, 
+			 click the remove button to remove the last data point. </p>
 		<br>
-		<h2>Enter Data Below</h2>
-		<p>Press enter key after entering in a value</p>
+		<h2>Enter Data</h2>
+		<p>Press enter after each datapoint:</p>
 		<input type="number" id="data" name="data" placeholder="Enter data here" size=20> 
 		<button onclick="addNumber()">Add Data</button>
 		<p id="numberList"></p>
