--- a/index.html
+++ b/index.html
@@ -23,7 +23,12 @@
       </div>
 
       <div class="col-6 col-s-9">
-        <img id="main_img" src="japan_cliff.jpg" width="10%">
+        <div class="topLeft">
+          <img id="main_img" src="japan_cliff.jpg"  width="50px" height="auto">
+        </div>
+        
+        <p> This is a test to see how it affects the picture.
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. </p>
       </div>
     </div>
 
