--- a/week5/index.html
+++ b/week5/index.html
@@ -1,1 +1,48 @@
+<!DOCTYPE HTML>
+<html lang= "en-us">
+	<head>
+		<title>Week 5</title>
+		<meta charset="utf-8">
+		<meta name="author" content="Steven Chambers">
+		<meta name="keywords" content = "">
+		<meta name="description" content = "">
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
+     	<!--External Doc - CSS -->
+    	<link rel="stylesheet" type="text/css" href="\week5\styles.css">
+	</head>
+	 
+	<body> 
+
+		<div class="header" name="header" id="header">
+			<h1>Week 5</h1>
+			<h3>To do List and Error Handling</h3>
+		</div>
+	  
+		<div class="row">
+			<div class="col-3 menu">
+				<ul>
+					<li><a href="to_do_app/to_do.html">To Do App</a></li>
+				</ul>
+			</div>
+	  
+			<div class="col-6 col-s-9">			  
+			    <p> </p>
+			</div>
+		</div>
+	  
+        
+		
+ 
+ 		<!--Bottom Seperator: simple line break with link back to assignments homepage -->
+		<hr>
+		<div class ="footer" >
+    		<a href="../index.html" id="homeLink"> To Previous </a>
+		</div>
+
+
+	</body>
+	<!--External .JS file-->
+	<!-- <script src="file_name.js"></script> -->
+
+</html> 
