--- a/week5/to_do_app/to_do.html
+++ b/week5/to_do_app/to_do.html
@@ -9,19 +9,22 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
      	<!--External Doc - CSS -->
-    	<link rel="stylesheet" type="text/css" href="file_name.css">
+    	<link rel="stylesheet" type="text/css" href="week5\styles.css">
 	</head>
 	 
 	<body> 
 
-		
+		<div class="header" name="header" id="header">
+			<h1>Week 5</h1>
+			<h3>To Do App</h3>
+		</div>
 
  
  		<!--Bottom Seperator: simple line break with link back to assignments homepage -->
-		<hr>
-		<div class ="bottom">
-    		<a href="../index.html"> To Previous </a>
-		</div>
+         <hr>
+         <div class ="footer" >
+             <a href="../index.html" id="homeLink"> To Previous </a>
+         </div>
 
 
 	</body>
