Moving Files and update landing page

--- a/week5/index.html
+++ b/week5/index.html
@@ -22,7 +22,7 @@
 		<div class="row">
 			<div class="col-3 menu">
 				<ul>
-					<li><a href="to_do_app/to_do.html">To Do App</a></li>
+					<li><a href="to_do.html">To Do App</a></li>
 				</ul>
 			</div>
 	  
