--- a/week5/to_do.html
+++ b/week5/to_do.html
@@ -20,10 +20,17 @@
 		</div>
 
  
+
+
+
+
+
+
+		
  		<!--Bottom Seperator: simple line break with link back to assignments homepage -->
          <hr>
          <div class ="footer" >
-             <a href="../index.html" id="homeLink"> To Previous </a>
+             <a href="\week5\index.html" id="homeLink"> To Previous </a>
          </div>
 
 
