--- a/week5/to_do.html
+++ b/week5/to_do.html
@@ -9,7 +9,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
      	<!--External Doc - CSS -->
-    	<link rel="stylesheet" type="text/css" href="week5\styles.css">
+    	<link rel="stylesheet" type="text/css" href="\week5\styles.css">
 	</head>
 	 
 	<body> 
