Build skeletonof  html: mostly div's and input

--- a/week5/to_do.html
+++ b/week5/to_do.html
@@ -19,6 +19,30 @@
 			<h3>To Do App</h3>
 		</div>
 
+		<div class="main">
+			<div class="top">
+
+
+			</div>
+			
+			<div class="bottom">
+				<ul id="theList">
+
+
+				</ul>
+				
+				<div class="add">
+					<button onclick="Need_add_function()">ADD</button>
+					<input type="text" id="input" placeholder="New Item">
+				</div>
+			</div>
+
+		
+
+		
+
+
+		</div>
  
 
 
@@ -26,7 +50,7 @@
 
 
 
-		
+
  		<!--Bottom Seperator: simple line break with link back to assignments homepage -->
          <hr>
          <div class ="footer" >
