--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
           <p>I was a business major and I found myself dreading my course load. One night I was 
             nerding out and trying to modify a old RPG game called Baldur’s Gate. However, it 
             would not run on my new computer, so I found myself diving into forums on how to 
-            get the old game to its glory days. I was reading up on modifying files and 
+            get the old game up and running like its glory days. I was reading up on modifying files and 
             how the code was read, until I was told to go to bed by my wife. The next morning, 
             I switched my major to computer engineering and I’ve been coding, studying, and 
             building since then. 
@@ -49,7 +49,7 @@
     
     <div class ="footer" name="footer" id="footer" >
       <a href="index.html" name="homeLink" id="homeLink"> WWD 330 - Home </a>
-  </div>
+    </div>
     
 
   </body>
