Added metaData to the to-do

--- a/week5/to_do.html
+++ b/week5/to_do.html
@@ -1,11 +1,11 @@
 <!DOCTYPE HTML>
 <html lang= "en-us">
 	<head>
-		<title>  </title>
+		<title>To Do List </title>
 		<meta charset="utf-8">
 		<meta name="author" content="Steven Chambers">
-		<meta name="keywords" content = "">
-		<meta name="description" content = "">
+		<meta name="keywords" content = "To-do, done, list, orginization">
+		<meta name="description" content = "Get things done and in order with this organized check list">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
      	<!--External Doc - CSS -->
@@ -30,7 +30,7 @@
 
 
 				</ul>
-				
+
 				<div class="add">
 					<button onclick="Need_add_function()">ADD</button>
 					<input type="text" id="input" placeholder="New Item">
