found Icon library edited colors of icons

--- a/week5/to_do.html
+++ b/week5/to_do.html
@@ -9,7 +9,8 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
      	<!--External Doc - CSS -->
-    	<link rel="stylesheet" type="text/css" href="\week5\styles.css">
+		<link rel="stylesheet" type="text/css" href="\week5\styles.css">
+		<script src="https://kit.fontawesome.com/f93e60cd83.js" crossorigin="anonymous"></script>
 	</head>
 	 
 	<body> 
@@ -21,6 +22,9 @@
 
 		<div class="main">
 			<div class="top">
+				<i class="far fa-arrow-alt-circle-right" style="color: blue;"></i>
+				<i class="fas fa-check-circle" style="color: green;"></i>
+				<P >test this icon</P>
 
 
 			</div>
@@ -32,7 +36,7 @@
 				</ul>
 
 				<div class="add">
-					<button onclick="Need_add_function()">ADD</button>
+					<button id="add_button" onclick="Need_add_function()">ADD</button>
 					<input type="text" id="input" placeholder="New Item">
 				</div>
 			</div>
