--- a/week5/to_do.html
+++ b/week5/to_do.html
@@ -8,40 +8,49 @@
 		<meta name="description" content = "Get things done and in order with this organized check list">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-     	<!--External Doc - CSS -->
+     	<!--External Doc - CSS & ICON LIBRARY-->
 		<link rel="stylesheet" type="text/css" href="\week5\styles.css">
 		<script src="https://kit.fontawesome.com/f93e60cd83.js" crossorigin="anonymous"></script>
 	</head>
 	 
 	<body> 
 
-		<div class="header" name="header" id="header">
-			<h1>Week 5</h1>
-			<h3>To Do App</h3>
-		</div>
+		<!-- <div class="header" name="header" id="header"> -->
+			<!-- <h1>Week 5</h1> -->
+			<!-- <h3>To Do App</h3> -->
+		<!-- </div> -->
 
 		<div class="main">
 			<div class="top">
-				<i class="far fa-arrow-alt-circle-right" style="color: blue;"></i>
-				<i class="fas fa-check-circle" style="color: green;"></i>
-				<P >test this icon</P>
+				<!-- <i class="far fa-arrow-alt-circle-right" style="color: blue;"></i> -->
+				<!-- <i class="fas fa-check-circle" style="color: green;"></i> -->
+				<!-- <P >test this icon</P> -->
 
 
 			</div>
 			
-			<div class="bottom">
-				<ul id="theList">
+			<div class="middle">
+				<ul id="theList" style="list-style-type: none;">
+					<li class="item">
+						<i class="far fa-arrow-alt-circle-right"></i>
+						<p class="text"> do homework</p>
+						<i class="fas fa-times-circle"></i>
 
-
+					</li>
 				</ul>
-
-				<div class="add">
-					<button id="add_button" onclick="Need_add_function()">ADD</button>
-					<input type="text" id="input" placeholder="New Item">
-				</div>
 			</div>
 
-		
+			<div class="bottom">
+				<div class="add">
+					<i class="fas fa-plus-circle" onclick="addItem()"></i>
+					<input type="text" id="input" placeholder="New Item">
+				</div>
+
+			</div>
+
+
+
+			
 
 		
 
@@ -64,6 +73,6 @@
 
 	</body>
 	<!--External .JS file-->
-	<script src="file_name.js"></script>
+	<script src="to_do.js"></script>
 
 </html> 
