adds toDo when button or enter, refocus & clear

--- a/week4/standard_dev_calc.html
+++ b/week4/standard_dev_calc.html
@@ -23,7 +23,7 @@
 		<br>
 		<h2>Enter Data</h2>
 		<p>Press enter after each datapoint:</p>
-		<input type="number" id="data" name="data" placeholder="Enter data here" size=20> 
+		<input type="number" id="data" name="" placeholder="Enter data here" size=20> 
 		<button onclick="addNumber()">Add Data</button>
 		<p id="numberList"></p>
 	</div>
