--- a/week5/to_do.html
+++ b/week5/to_do.html
@@ -32,9 +32,9 @@
 			<div class="middle">
 				<ul id="theList" style="list-style-type: none;">
 					<li class="item">
-						<i class="far fa-arrow-alt-circle-right"></i>
+						<!-- <i class="far fa-arrow-alt-circle-right"></i>
 						<p class="text"> do homework</p>
-						<i class="fas fa-times-circle"></i>
+						<i class="fas fa-times-circle"></i> -->
 
 					</li>
 				</ul>
@@ -42,7 +42,7 @@
 
 			<div class="bottom">
 				<div class="add">
-					<i class="fas fa-plus-circle" onclick="addItem()"></i>
+					<i class="fas fa-plus-circle" onclick="enter()"></i>
 					<input type="text" id="input" placeholder="New Item">
 				</div>
 
