Adding more notes

--- a/week5/to_do.html
+++ b/week5/to_do.html
@@ -15,10 +15,10 @@
 	 
 	<body> 
 
-		<!-- <div class="header" name="header" id="header"> -->
-			<!-- <h1>Week 5</h1> -->
-			<!-- <h3>To Do App</h3> -->
-		<!-- </div> -->
+		<div class="header" name="header" id="header"> 
+			<h1>Week 5</h1> 
+			<h3>To Do App</h3>
+		</div>
 
 		<div class="main">
 			<div class="top">
