--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <div class="row">
       <div class="col-3 menu">
       <h2>Notes</h2>
-      <div id="weekList"></div>
+      <div id="weekList" style="list-style-type: none;"></div>
       <br>
       <!-- <h2> Term Projects </h2> -->
       <!-- <div id="projectList"></div> -->
