--- a/week5/to_do.html
+++ b/week5/to_do.html
@@ -12,58 +12,37 @@
 		<link rel="stylesheet" type="text/css" href="\week5\styles.css">
 		<script src="https://kit.fontawesome.com/f93e60cd83.js" crossorigin="anonymous"></script>
 	</head>
-	 
-	<body> 
+	
+	<body onload="tasker.construct();"> 
 
 		<div class="header" name="header" id="header"> 
 			<h1>Week 5</h1> 
 			<h3>To Do App</h3>
 		</div>
 
-		<div class="main">
-			<div class="top">
-				<!-- <i class="far fa-arrow-alt-circle-right" style="color: blue;"></i> -->
-				<!-- <i class="fas fa-check-circle" style="color: green;"></i> -->
-				<!-- <P >test this icon</P> -->
+		<div id="tasker" class="tasker">
 
 
+			<!--Where to do will display-->
+			<div class="tasker_body">
+				<div id="tasks"></div>
 			</div>
-			
-			<div class="middle">
-				<ul id="theList" style="list-style-type: none;">
-					<li class="item">
-						<!-- <i class="far fa-arrow-alt-circle-right"></i>
-						<p class="text"> do homework</p>
-						<i class="fas fa-times-circle"></i> -->
-
-					</li>
-				</ul>
-			</div>
-
-			<div class="bottom">
-				<div class="add">
-					<i class="fas fa-plus-circle" onclick="enter()"></i>
-					<input type="text" id="input" placeholder="New Item">
-				</div>
-
-			</div>
-
-
-
-			
-
 		
+			
+			<!--Error alert-->
+			<div id="error" class="error">Please enter a to-do</div>
 
+			<div id="tasker_header" class="tasker_header">
 
+				<!--user input-->
+				<input type="text" id="input_task" placeholder="enter a to do">
+
+				<!--add button-->
+				<button id="add_task_button"><i class= "fa fa-fw fa-plus"></i></button>
+
+			</div>
 		</div>
  
-
-
-
-
-
-
-
  		<!--Bottom Seperator: simple line break with link back to assignments homepage -->
          <hr>
          <div class ="footer" >
@@ -73,6 +52,6 @@
 
 	</body>
 	<!--External .JS file-->
-	<script src="to_do.js"></script>
+	<script src="tasker.js"></script>
 
 </html> 
