messing around with CSS

--- a/week5/to_do.html
+++ b/week5/to_do.html
@@ -29,10 +29,9 @@
 			</div>
 		
 			
-			<!--Error alert-->
-			<div id="error" class="error">Please enter a to-do</div>
+			
 
-			<div id="tasker_header" class="tasker_header">
+			<div id="tasker_bottom" class="tasker_bottom">
 
 				<!--user input-->
 				<input type="text" id="input_task" placeholder="enter a to do">
@@ -41,6 +40,9 @@
 				<button id="add_task_button"><i class= "fa fa-fw fa-plus"></i></button>
 
 			</div>
+
+			<!--Error alert-->
+			<div id="error" class="error">Please type a to-do, then enter</div>
 		</div>
  
  		<!--Bottom Seperator: simple line break with link back to assignments homepage -->
