--- a/week5/to_do.html
+++ b/week5/to_do.html
@@ -27,14 +27,14 @@
                 </ul>
             </div>
             <div class="add-to-do">
-                <i class="fa fa-plus-circle"></i>
+                <button class="fa fa-plus-circle" id="button" onclick="addTask()"></button>
                 <input type="text" id="input" placeholder="Add a Task">
             </div>
         </div>
 	
 	</body>
 	<!--External .JS file-->
-	<script src="js/app.js"></script>
+	<script src="tasker.js"></script>
 
 </html> 
 
