Move files for pic, elimnate deprecisated code

--- a/week5/to_do.html
+++ b/week5/to_do.html
@@ -27,7 +27,7 @@
                 </ul>
             </div>
             <div class="add-to-do">
-                <button class="fa fa-plus-circle" id="button" onclick="addTask()"></button>
+                <i class="fa fa-plus-circle" id="button" onclick="addTask()"></i>
                 <input type="text" id="input" placeholder="Add a Task">
             </div>
         </div>
