--- a/week8/dnd/dnd.html
+++ b/week8/dnd/dnd.html
@@ -9,28 +9,20 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
      	<!--External Doc - CSS -->
-    	<link rel="stylesheet" type="text/css" href="\week5\styles.css">
+    	<link rel="stylesheet" type="text/css" href="/week8/week8.css">
 	</head>
 	 
 	<body> 
 
 		<div class="header" name="header" id="header">
 			<h1>Week 8</h1>
-			<h3>Consuming API's</h3>
+			<h3>Consuming API's: Dungeons and Dragons</h3>
 		</div>
 	  
-		<div class="row">
-			<div class="col-3 menu">
-				<ul>
-                    <li><a href="starwars/starwarsapi.html">Star Wars Planets</a></li>
-					<li><a href="dnd/dnd.html">Dungeons and Dragons</a></li>
-					<li><a href="teamActivity/team.html">Team Activity</a></li>
-				</ul>
-			</div>
-	  
-			<div class="col-6 col-s-9">			  
-			    
-			</div>
+		<div class="container_main">
+			
+			
+			
 		</div>
 	  
         
@@ -39,12 +31,12 @@
  		<!--Bottom Seperator: simple line break with link back to assignments homepage -->
 		<hr>
 		<div class ="footer" >
-    		<a href="./index.html" id="homeLink"> To Previous </a>
+    		<a href="/week8/index.html" id="homeLink"> To Previous </a>
 		</div>
 
 
 	</body>
 	<!--External .JS file-->
-	<!-- <script src="file_name.js"></script> -->
+	<script src="dndapi.js"></script>
 
 </html> 
