--- a/week9/index.html
+++ b/week9/index.html
@@ -1,1 +1,46 @@
+<!DOCTYPE HTML>
+<html lang= "en-us">
+	<head>
+		<title>WeeK 8 - API</title>
+		<meta charset="utf-8">
+		<meta name="author" content="Steven Chambers">
+		<meta name="keywords" content = "">
+		<meta name="description" content = "">
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
+     	<!--External Doc - CSS -->
+    	<link rel="stylesheet" type="text/css" href="\week5\styles.css">
+	</head>
+	 
+	<body> 
+
+		<div class="header" name="header" id="header">
+			<h1>Week 8</h1>
+			<h3>Consuming API's</h3>
+		</div>
+	  
+		<div class="row">
+			<div class="col-3 menu">
+				<ul>
+                    <li><a href="drum-set/index.html">Drum Set</a></li>
+				</ul>
+			</div>
+	  
+			<div class="col-6 col-s-9">			  
+			    
+			</div>
+		</div>
+	  
+        
+		
+ 
+ 		<!--Bottom Seperator: simple line break with link back to assignments homepage -->
+		<hr>
+		<div class ="footer" >
+    		<a href="./index.html" id="homeLink"> To Previous </a>
+		</div>
+
+
+	</body>
+
+</html> 
