--- a/week9/index.html
+++ b/week9/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html lang= "en-us">
 	<head>
-		<title>WeeK 8 - API</title>
+		<title>WeeK 9 Responsive CSS</title>
 		<meta charset="utf-8">
 		<meta name="author" content="Steven Chambers">
 		<meta name="keywords" content = "">
@@ -15,8 +15,8 @@
 	<body> 
 
 		<div class="header" name="header" id="header">
-			<h1>Week 8</h1>
-			<h3>Consuming API's</h3>
+			<h1>Week 9</h1>
+			<h3>Tranistions</h3>
 		</div>
 	  
 		<div class="row">
