added and styled back button

--- a/week10/clock/index.html
+++ b/week10/clock/index.html
@@ -16,6 +16,10 @@
       </div>
     </div>
 
+    <a href="/week10/index.html">
+    <img class="back" src="exit.png"> 
+    </a>
+
   <script src="clock.js"></script>
   
 </body>
