--- a/week10/index.html
+++ b/week10/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html lang= "en-us">
 	<head>
-		<title>WeeK 8 - API</title>
+		<title>Week 10</title>
 		<meta charset="utf-8">
 		<meta name="author" content="Steven Chambers">
 		<meta name="keywords" content = "">
@@ -23,7 +23,7 @@
 			<div class="col-3 menu">
 				<ul>
                     <li><a href="clock/index.html">JavaScript Clock</a></li>
-					
+					<li><a href="css_variables/index.html">CSS Variables</a></li>
 				</ul>
 			</div>
 	  
@@ -38,7 +38,7 @@
  		<!--Bottom Seperator: simple line break with link back to assignments homepage -->
 		<hr>
 		<div class ="footer" >
-    		<a href="./index.html" id="homeLink"> To Previous </a>
+    		<a href="/index.html" id="homeLink"> To Previous </a>
 		</div>
 
 
