add final project link to main index html

--- a/index.html
+++ b/index.html
@@ -15,11 +15,15 @@
 
     <div class="row">
       <div class="col-3 menu">
-      <h2>Notes</h2>
-      <div id="weekList" style="list-style-type: none;"></div>
-      <br>
-      <!-- <h2> Term Projects </h2> -->
-      <!-- <div id="projectList"></div> -->
+        <h2>Notes</h2>
+        <div id="weekList" style="list-style-type: none;"></div>
+        <br>
+        <h2> Final Project </h2>
+          <ul>
+            <li>
+              <a href="/final_project/index.html">D&D Character Guide</a>
+            </li>
+          </ul>
       </div>
 
       <div class="col-6 col-s-9">
