clean main home index

--- a/week8/dnd/dnd.html
+++ b/week8/dnd/dnd.html
@@ -23,11 +23,9 @@
 			<div class="race">
 				<div class="card" id="dragonborn">
 					<div class="image"></div>
-					<p id="dragonborn_info"></p>
-				​
-					
+					<p id="dragonborn_info"></p>	
 				</div>
-				<div class="card" id="dwarf" value="dwarf">
+				<div class="card" id="dwarf">
 					<div class="image" ></div>
 					<p id="dwarf_info"></p>
 				</div>
