--- a/week9/index.html
+++ b/week9/index.html
@@ -37,7 +37,7 @@
  		<!--Bottom Seperator: simple line break with link back to assignments homepage -->
 		<hr>
 		<div class ="footer" >
-    		<a href="./index.html" id="homeLink"> To Previous </a>
+    		<a href="/index.html" id="homeLink"> To Previous </a>
 		</div>
 
 
