connect final project to main index

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <h2> Final Project </h2>
           <ul>
             <li>
-              <a href="/final_project/index.html">D&D Character Guide</a>
+              <a href="./final_project/index.html">D&D Character Guide</a>
             </li>
           </ul>
       </div>
