efited json file

--- a/final_project/index.html
+++ b/final_project/index.html
@@ -18,7 +18,7 @@
 <body>  
 
     <div class="main">
-        <div class="playstyle"> Playstyle
+        <div class="playstyle"> <h2>Playstyle</h2>
 
             <button class="collapsible"> 
                 <img src="images/playstyle/inyourface.jpg"><span class="title">In Your Face</span></button>
@@ -43,7 +43,7 @@
         <div class="race"> <span class="title">Race</span>
 
             <div class="collapsible"> 
-                <img src="./images/race/dragonborn.jpeg"><span class="title">Dragonborn</span></div>
+                <img src="./images/race/dragonborn.jpeg"><span class="">Dragonborn</span></div>
             <div class="content" id="dragonborn">
                 <p id="dragonborn_info"></p>
                 <button class="select">Select</button>
