--- a/final_project/index.html
+++ b/final_project/index.html
@@ -20,20 +20,20 @@
     <div class="main">
         <div class="playstyle"> <h2>Playstyle</h2>
 
-            <button class="collapsible"> 
-                <img src="images/playstyle/inyourface.jpg"><span class="title">In Your Face</span></button>
+            <div class="collapsible"> 
+                <img src="images/playstyle/inyourface.jpg"><span class="headText">In Your Face</span></div>
             <div class="content">
                 <p></p>
             </div>
 
-            <button class="collapsible"> 
-                <img src="images/playstyle/shadows.png">From the Shadows</button>
+            <div class="collapsible"> 
+                <img src="images/playstyle/shadows.png">From the Shadows</div>
             <div class="content">
                 <p></p>
             </div>
 
-            <button class="collapsible"> 
-                <img src="images/playstyle/arcane.jpg">Way of The Arcane</button>
+            <div class="collapsible"> 
+                <img src="images/playstyle/arcane.jpg">Way of The Arcane</div>
             <div class="content">
                 <p></p>
             </div>
@@ -43,17 +43,17 @@
         <div class="race"> <span class="title">Race</span>
 
             <div class="collapsible"> 
-                <img src="./images/race/dragonborn.jpeg"><span class="">Dragonborn</span></div>
+                <img src="images/race/dragonborn.jpeg"><span class="">Dragonborn</span></div>
             <div class="content" id="dragonborn">
                 <p id="dragonborn_info"></p>
-                <button class="select">Select</button>
+                <button class="select" id="dragonborn">Select</button>
             </div>
 
-            <button class="collapsible"> 
-                <img src="images/race/dwarf.jpeg">Dwarf</button>
+            <div class="collapsible"> 
+                <img src="images/race/dwarf.jpeg">Dwarf</div>
             <div class="content" id="dwarf">
                 <p id="dwarf_info"></p>
-                <button class="select">Select</button>
+                <button class="select" id="dwarf">Select</button>
             </div>
 
             <button class="collapsible"> 
