added character class and import

--- a/final_project/index.html
+++ b/final_project/index.html
@@ -1,4 +1,5 @@
 <!DOCTYPE HTML>
+<script type="module" src="playerCharacter.js"></script>
 <html lang= "en-us">
 <head>
     <title>Character Creation</title>
@@ -254,6 +255,7 @@
 
 </body>
 <!--External .JS file-->
-<script src="main.js"></script>
+<script type="module" src="main.js"></script>
+
 
 </html> 
