Create Character and assign stats created

--- a/final_project/index.html
+++ b/final_project/index.html
@@ -67,7 +67,7 @@
                 </div>
                 <div class="content" id="dragonborn">
                     <p id="dragonborn_info"></p>
-                    <button class="select" id="dragonborn">Select</button>
+                    <button class="selectRace" id="dragonborn">Select</button>
                 </div>
             </div>
 
@@ -76,7 +76,7 @@
                     <img src="images/race/dwarf.jpeg"><span class="raceHeadDwarf">Dwarf</span></div>
                 <div class="content" id="dwarf">
                     <p id="dwarf_info"></p>
-                    <button class="select" id="dwarf">Select</button>
+                    <button class="selectRace" id="dwarf">Select</button>
                 </div>
             </div>
             <div class="grid race-item3">
@@ -85,7 +85,7 @@
                 </div>
                 <div class="content" id="elf">
                     <p id="elf_info"></p>
-                    <button class="select">Select</button>
+                    <button class="selectRace">Select</button>
                 </div>
             </div>
 
@@ -94,7 +94,7 @@
                     <img src="images/race/gnome.jpeg"><span class="raceHeadGnome">Gnome</span></div>
                 <div class="content" id="gnome">
                     <p id="gnome_info"></p>
-                    <button class="select">Select</button>
+                    <button class="selectRace">Select</button>
                 </div>
             </div>
 
@@ -103,7 +103,7 @@
                     <img src="images/race/half_elf.jpeg"><span class="raceHeadHalfElf">Half-Elf</span></div>
                 <div class="content" id="half-elf">
                     <p id="half-elf_info"></p>
-                    <button class="select">Select</button>
+                    <button class="selectRace">Select</button>
                 </div>
             </div>
 
@@ -112,7 +112,7 @@
                     <img src="images/race/half_orc.jpeg"><span class="raceHeadHalfOrc">Half-Orc</span></div>
                 <div class="content" id="half-orc">
                     <p id="half-orc_info"></p>
-                    <button class="select">Select</button>
+                    <button class="selectRace">Select</button>
                 </div>
             </div>
 
@@ -121,7 +121,7 @@
                     <img src="images/race/halfling.jpeg"><span class="raceHeadHalfling">Halfling</span></div>
                 <div class="content" id="halfling">
                     <p id="halfling_info"></p>
-                    <button class="select">Select</button>
+                    <button class="selectRace">Select</button>
                 </div>
             </div>
 
@@ -130,7 +130,7 @@
                     <img src="images/race/human.jpeg"><span class="raceHeadHuman">Human</span></div>
                 <div class="content" id="human">
                     <p id="human_info"></p>
-                    <button class="select">Select</button>
+                    <button class="selectRace">Select</button>
                 </div>
             </div>
 
@@ -139,7 +139,7 @@
                     <img src="images/race/teifling.jpeg"><span class="raceHeadTeifling">Teifling</span></div>
                 <div class="content" id="tiefling">
                     <p id="tiefling_info"></p>
-                    <button class="select">Select</button>
+                    <button class="selectRace">Select</button>
                 </div>
             </div>
             
@@ -154,7 +154,7 @@
                     <img src="images/class/barbarian.jpeg"><span class="classHeadBarbarian">Barbarian</span></div>
                 <div class="content" id="barbarian">
                     <p id="barbarian_info"></p>
-                    <button class="select">Select</button>
+                    <button class="selectClass">Select</button>
                 </div>
             </div>
 
@@ -163,7 +163,7 @@
                     <img src="images/class/bard.jpeg"><span class="classHeadBard">Bard</span></div>
                 <div class="content" id="bard">
                     <p id="bard_info"></p>
-                    <button class="select">Select</button>
+                    <button class="selectClass">Select</button>
                 </div>
             </div>
 
@@ -172,7 +172,7 @@
                     <img src="images/class/cleric.jpeg"><span class="classHeadCleric">Cleric</span></div>
                 <div class="content" id="cleric">
                     <p id="cleric_info"></p>
-                    <button class="select">Select</button>
+                    <button class="selectClass">Select</button>
                 </div>
             </div>
 
@@ -181,7 +181,7 @@
                     <img src="images/class/druid.jpeg"><span class="classHeadDruid">Druid</span></div>
                 <div class="content" id="druid">
                     <p id="druid_info"></p>
-                    <button class="select">Select</button>
+                    <button class="selectClass">Select</button>
                 </div>
             </div>
 
@@ -190,7 +190,7 @@
                     <img src="images/class/fighter.jpeg"><span class="classHeadFighter">Fighter</span></div>
                 <div class="content" id="fighter">
                     <p id="fighter_info"></p>
-                    <button class="select">Select</button>
+                    <button class="selectClass">Select</button>
                 </div>
             </div>
 
@@ -199,7 +199,7 @@
                     <img src="images/class/monk.jpeg"><span class="classHeadMonk">Monk</span></div>
                 <div class="content" id="monk">
                     <p id="monk_info"></p>
-                    <button class="select">Select</button>
+                    <button class="selectClass">Select</button>
                 </div>
             </div>
 
@@ -208,7 +208,7 @@
                     <img src="images/class/ranger.jpeg"><span class="classHeadRanger">Ranger</span></div>
                 <div class="content" id="ranger">
                     <p id="ranger_info"></p>
-                    <button class="select">Select</button>
+                    <button class="selectClass">Select</button>
                 </div>
             </div>
 
@@ -217,7 +217,7 @@
                     <img src="images/class/rouge.jpeg"><span class="classHeadRouge">Rouge</span></div>
                 <div class="content" id="rouge">
                     <p id="rouge_info"></p>
-                    <button class="select">Select</button>
+                    <button class="selectClass">Select</button>
                 </div>
             </div>
 
@@ -226,7 +226,7 @@
                 <img src="images/class/sorcerer.jpeg"><span class="classHeadSorcerer">Sorcerer</span></div>
                 <div class="content" id="sorcerer">
                     <p id="sorcerer_info"></p>
-                    <button class="select">Select</button>
+                    <button class="selectClass">Select</button>
                 </div>
             </div>
 
@@ -235,7 +235,7 @@
                     <img src="images/class/warlock.jpeg"><span class="classHeadWarlock">Warlock</span></div>
                 <div class="content" id="warlock">
                     <p id="warlock_info"></p>
-                    <button class="select">Select</button>
+                    <button class="selectClass">Select</button>
                 </div>
             </div>
 
@@ -244,12 +244,17 @@
                     <img src="images/class/wizard.jpeg"><span class="classHeadWizard"></span>Wizard</div>
                 <div class="content" id="wizard">
                     <p id="wizard_info"></p>
-                    <button class="select">Select</button>
+                    <button class="selectClass">Select</button>
                 </div>
             </div>
 
         
 
+        </div>
+
+        <div>
+            <button class="createCharacter" id="createCharacter">Create Character</button>
+            <p id="createdCharacter"></p>
         </div>
     </div>
 
